@@ -1,8 +1,8 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-0.5
-Date: 2007-03-12
-Author: Ingo Feinerer
+Version: 0.3-0.6
+Date: 2008-03-21
+Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
 Imports: proxy
