@@ -1,3 +1,10 @@
+2008-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (materialize, tmMap): Improvements suggested by
+	Christian Buchta.
+
+	* inst/CITATION: Added template to include JSS article reference.
+
 2008-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (tmMap): Introduced lazy mapping.
